Update title. Add year

--- a/doc/bib/references.bib
+++ b/doc/bib/references.bib
@@ -1,5 +1,6 @@
-@misc{libceed-github-page,
-  title =  {lib{CEED}'s {G}it{H}ub page},
+@misc{libceed-dev-site,
+  title =  {lib{CEED} development site},
   url =    {https://github.com/ceed/libceed},
-  howpublished = {\url{https://github.com/ceed/libceed}}
+  howpublished = {\url{https://github.com/ceed/libceed}},
+  year = 2020
 }
