doc: split examples into separate files in the source tree
* Copy examples/**.rst into the source directory so they can be picked
  up by Sphinx.
* Some minor corrections/clarifications to docs that I noticed while
  splitting them apart (shame on me for bundling in this commit).

--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -8,3 +8,14 @@
     Year = 2010,
     doi = {10.1007/s10915-010-9396-8}
 }
+@article{straka1993numerical,
+  title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
+  author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
+  journal={International Journal for Numerical Methods in Fluids},
+  volume={17},
+  number={1},
+  pages={1--22},
+  year={1993},
+  publisher={Wiley Online Library},
+  doi={10.1002/fld.1650170103}
+}
