Add citation and bib info

--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -8,6 +8,18 @@
     Year = 2010,
     doi = {10.1007/s10915-010-9396-8}
 }
+
+@article{giraldoetal2010,
+    author = {Giraldo, F. X. and Restelli, M. and Läuter, M.},
+    title = {Semi-Implicit Formulations of the Navier–Stokes Equations: Application to Nonhydrostatic Atmospheric Modeling},
+    journal = {SIAM Journal on Scientific Computing},
+    volume = {32},
+    number = {6},
+    pages = {3394--3425},
+    year = {2010},
+    doi = {10.1137/090775889}
+}
+
 @article{straka1993numerical,
   title={Numerical solutions of a non-linear density current: A benchmark solution and comparisons},
   author={Straka, Jerry M and Wilhelmson, Robert B and Wicker, Louis J and Anderson, John R and Droegemeier, Kelvin K},
@@ -19,3 +31,4 @@
   publisher={Wiley Online Library},
   doi={10.1002/fld.1650170103}
 }
+
