NS: stabilization added to doc
Thanks-to: Valeria Barra <valeriabarra21@gmail.com>

--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -32,3 +32,12 @@
   doi={10.1002/fld.1650170103}
 }
 
+@article{hughesetal2010,
+  title={Stabilized Methods for Compressible Flows},
+  author={Hughes, Thomas J R and Scovazzi, Guglielmo and Tezduyar, Tayfun E},
+  journal={Journal of Scientific Computing},
+  volume={43},
+  pages={343--368},
+  year={2010},
+  doi={10.1007/s10915-008-9233-5}
+}
