Solids - update documentation
Co-authored-by: Jeremy L Thompson <jeremy.thompson@colorado.edu>
Co-authored-by: Arash Mehraban <arashm81@gmail.com>

--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -41,3 +41,26 @@
   year={2010},
   doi={10.1007/s10915-008-9233-5}
 }
+
+@book{hughes2012finite,
+  title={The finite element method: linear static and dynamic finite element analysis},
+  author={Hughes, Thomas JR},
+  year={2012},
+  publisher={Courier Corporation}
+}
+
+@book{belytschko2013nonlinear,
+  title={Nonlinear finite elements for continua and structures},
+  author={Belytschko, Ted and Liu, Wing Kam and Moran, Brian and Elkhodary, Khalil},
+  year={2013},
+  publisher={John wiley \& sons}
+}
+
+@Book{holzapfel2000nonlinear,
+ author={Holzapfel, Gerhard},
+ title={Nonlinear solid mechanics: a continuum approach for engineering},
+ publisher={Wiley},
+ year={2000},
+ address={Chichester New York},
+ isbn={978-0-471-82319-3}
+}
