Notebook for ElemRestriction Python interface: improved ASCII art for strided & blocked restrictions
Greatly helped-by @jeremylt

--- a/examples/jupyter/tutorials/tutorial4-python-elemrestriction.ipynb
+++ b/examples/jupyter/tutorials/tutorial4-python-elemrestriction.ipynb
@@ -121,10 +121,15 @@
     "import libceed\n",
     "import numpy as np\n",
     "\n",
-    "# in this 1D example, the dofs are indexed as\n",
-    "# \n",
+    "# In this 1D example, the dofs are indexed as\n",
+    "#\n",
+    "# Restriction input:\n",
     "#  x --  x --  x --  x\n",
     "# 10 -- 11 -- 12 -- 13\n",
+    "#\n",
+    "# Restriction output:\n",
+    "#  x --  x |  x --  x | x --  x\n",
+    "# 10 -- 11 | 11 -- 12 | 12 -- 13\n",
     "\n",
     "ceed = libceed.Ceed()\n",
     "\n",
@@ -179,10 +184,15 @@
     }
    ],
    "source": [
-    "# in this 1D example, the dofs are indexed as\n",
-    "# \n",
-    "#  x --  x --  x --  x --  x --  x\n",
-    "# 10 -- 11 -- 12 -- 13 -- 14 -- 15\n",
+    "# In this 1D example, the dofs are indexed as\n",
+    "#\n",
+    "# Restriction input:\n",
+    "#   x   --   x   --   x\n",
+    "# 10-11 -- 12-13 -- 14-15\n",
+    "#\n",
+    "# Restriction output:\n",
+    "#  x --  x |  x --  x |  x --  x\n",
+    "# 10 -- 11 | 12 -- 13 | 14 -- 15\n",
     "\n",
     "ne = 3\n",
     "\n",
@@ -208,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we illustrate the creation of a blocked element restriction (from an L-vector to an E-vector) and its transpose (inverse operation, from an E-vector to an L-vector)"
+    "* In the following example (intended for backend developers), we illustrate the creation of a blocked element restriction (from an L-vector to an E-vector) and its transpose (inverse operation, from an E-vector to an L-vector)"
    ]
   },
   {
@@ -257,10 +267,32 @@
     }
    ],
    "source": [
-    "# in this 1D example, the dofs are indexed as\n",
+    "# In this 1D example, the dofs are indexed as\n",
     "# \n",
     "#  x --  x --  x --  x --  x --  x --  x --  x --  x\n",
     "# 10 -- 11 -- 12 -- 13 -- 14 -- 15 -- 16 -- 17 -- 18\n",
+    "# \n",
+    "# We block elements into groups of 5:\n",
+    "#  ________________________________________________________________________________________\n",
+    "# |                   block 1:                           |         block 2:               |\n",
+    "# |    e1    |    e2    |    e3    |    e4    |    e5    |    e1    |    e2    |    e3    |\n",
+    "# |                                                      |                                |\n",
+    "# |  x --  x  |  x -- x  |  x -- x  |  x -- x  |  x -- x |  x -- x  |  x -- x  |  x  -- x |\n",
+    "# | 10 -- 11  | 11   12  | 12   13  | 13   14  | 14   15 | 15   16  | 16   17  |  17   18 |\n",
+    "#\n",
+    "# Intermediate logical representation:\n",
+    "#  ______________________________________________________________________________\n",
+    "# |               block 1:               |               block 2:               |\n",
+    "# |     node1:                 node2:    |     node1:                 node2:    |\n",
+    "# | 10-11-12-13-14        11-12-13-14-15 | 15-16-17-*-*            16-17-18-*-* |\n",
+    "# | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 |\n",
+    "#\n",
+    "# Forward restriction output:\n",
+    "#  ______________________________________________________________________________\n",
+    "# |               block 1:               |               block 2:               |\n",
+    "# |     node1:                 node2:    |     node1:                 node2:    |\n",
+    "# | 10-11-12-13-14        11-12-13-14-15 | 15-16-17-17-17        16-17-18-18-18 |\n",
+    "# | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 |\n",
     "\n",
     "ne = 8\n",
     "blksize = 5\n",
@@ -333,7 +365,7 @@
     }
    ],
    "source": [
-    "# in this 1D example, the dofs are indexed as\n",
+    "# In this 1D example, the dofs are indexed as\n",
     "# \n",
     "#  x --  x --  x --  x --  x --  x --  x --  x --  x\n",
     "# 10 -- 11 -- 12 -- 13 -- 14 -- 15 -- 16 -- 17 -- 18\n",
@@ -387,7 +419,7 @@
     }
    ],
    "source": [
-    "# in this 1D example, there are four nodes per element\n",
+    "# In this 1D example, there are four nodes per element\n",
     "# \n",
     "#  x -- o -- o -- x -- o -- o -- x -- o -- o -- x\n",
     "\n",
@@ -441,7 +473,7 @@
     }
    ],
    "source": [
-    "# in this 1D example, there are three elements (four nodes in total) \n",
+    "# In this 1D example, there are three elements (four nodes in total) \n",
     "# \n",
     "#  x -- x -- x -- x\n",
     "\n",
