User manual and jupyter-notebook: a bit of rewording

--- a/examples/jupyter/tutorials/tutorial2-python-ceed.ipynb
+++ b/examples/jupyter/tutorials/tutorial2-python-ceed.ipynb
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use a GPU backend, for instance `/gpu/occa`, run"
+    "To use a particular backend, for instance `/cpu/self/opt/blocked` you can specify"
    ]
   },
   {
@@ -168,7 +168,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ceed = libceed.Ceed('/gpu/occa')"
+    "ceed = libceed.Ceed('/cpu/self/opt/blocked')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, if libCEED is built with GPU support, you can specify a GPU backend, e.g., `/gpu/occa` or `/gpu/cuda/gen`."
    ]
   }
  ],
