Jupyter-notebooks: Some cleaning in the outputs and clarifications

--- a/examples/jupyter/tutorials/tutorial3-python-vector.ipynb
+++ b/examples/jupyter/tutorials/tutorial3-python-vector.ipynb
@@ -122,33 +122,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can visualize the CeedVector (that by deafult is initialized to 0) by typing"
+    "You can visualize the (unset) CeedVector by typing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CeedVector length 10\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(x)"
    ]
@@ -162,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +276,7 @@
        "-3.14"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,19 +291,19 @@
     "b = x.get_array()\n",
     "b[3] = -3.14;\n",
     "x.restore_array()\n",
-    "b[3]"
+    "a[3]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we compute the $L_1$, $L_2$ (default), and $L_{\\infty}$ norms of a `CeedVector` "
+    "* In the following example, we compute the $L_1$, $L_2$ (default), and $L_{\\infty}$ norms of a `CeedVector` (keeping in mind that these are local norm computations; not accurate for parallel executions with no reductions)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
