--- a/examples/jupyter/tutorials/tutorial4-python-elemrestriction.ipynb
+++ b/examples/jupyter/tutorials/tutorial4-python-elemrestriction.ipynb
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10. 11. 11. 12. 12. 13.]\n"
+      "y = [10. 11. 11. 12. 12. 13.]\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
     "r.apply(x, y)\n",
     "\n",
     "y_array = y.get_array_read()\n",
-    "print(y_array)\n",
+    "print('y =', y_array)\n",
     "y.restore_array_read()"
    ]
   },
@@ -172,14 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10. 11. 12. 13. 14. 15.]\n"
+      "y = [10. 11. 12. 13. 14. 15.]\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     "r.apply(x, y)\n",
     "\n",
     "y_array = y.get_array_read()\n",
-    "print(y_array)\n",
+    "print('y =', y_array)\n",
     "y.restore_array_read()"
    ]
   },
@@ -230,39 +230,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CeedVector length 20\n",
-      "  10.000000\n",
-      "  11.000000\n",
-      "  12.000000\n",
-      "  13.000000\n",
-      "  14.000000\n",
-      "  11.000000\n",
-      "  12.000000\n",
-      "  13.000000\n",
-      "  14.000000\n",
-      "  15.000000\n",
-      "  15.000000\n",
-      "  16.000000\n",
-      "  17.000000\n",
-      "  17.000000\n",
-      "  17.000000\n",
-      "  16.000000\n",
-      "  17.000000\n",
-      "  18.000000\n",
-      "  18.000000\n",
-      "  18.000000\n",
-      "\n",
-      "CeedVector length 9\n",
-      "  10.000000\n",
-      "  22.000000\n",
-      "  24.000000\n",
-      "  26.000000\n",
-      "  28.000000\n",
-      "  30.000000\n",
-      "  32.000000\n",
-      "  34.000000\n",
-      "  18.000000\n",
-      "\n"
+      "y = [10. 11. 12. 13. 14. 11. 12. 13. 14. 15. 15. 16. 17. 17. 17. 16. 17. 18.\n",
+      " 18. 18.]\n",
+      "x = [10. 22. 24. 26. 28. 30. 32. 34. 18.]\n"
      ]
     }
    ],
@@ -314,12 +284,16 @@
     "\n",
     "r.apply(x, y)\n",
     "\n",
-    "print(y)\n",
+    "y_array = y.get_array_read()\n",
+    "print('y =', y_array)\n",
+    "y.restore_array_read()\n",
     "\n",
     "x.set_value(0)\n",
     "r.T.apply(y, x)\n",
     "\n",
-    "print(x)"
+    "x_array = x.get_array_read()\n",
+    "print('x =', x_array)\n",
+    "x.restore_array_read()"
    ]
   },
   {
@@ -338,29 +312,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CeedVector length 10\n",
-      "  15.000000\n",
-      "  16.000000\n",
-      "  17.000000\n",
-      "  17.000000\n",
-      "  17.000000\n",
-      "  16.000000\n",
-      "  17.000000\n",
-      "  18.000000\n",
-      "  18.000000\n",
-      "  18.000000\n",
-      "\n",
-      "CeedVector length 9\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  15.000000\n",
-      "  32.000000\n",
-      "  34.000000\n",
-      "  18.000000\n",
-      "\n"
+      "y = [15. 16. 17. 17. 17. 16. 17. 18. 18. 18.]\n",
+      "x = [ 0.  0.  0.  0.  0. 15. 32. 34. 18.]\n"
      ]
     }
    ],
@@ -390,12 +343,16 @@
     "\n",
     "r.apply_block(1, x, y)\n",
     "\n",
-    "print(y)\n",
+    "y_array = y.get_array_read()\n",
+    "print('y =', y_array)\n",
+    "y.restore_array_read()\n",
     "\n",
     "x.set_value(0)\n",
     "r.T.apply_block(1, y, x)\n",
     "\n",
-    "print(x)"
+    "x_array = x.get_array_read()\n",
+    "print('x =', x_array)\n",
+    "x.restore_array_read()"
    ]
   },
   {
@@ -407,14 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 1. 1. 2. 1. 1. 2. 1. 1. 1.]\n"
+      "mult = [1. 1. 1. 2. 1. 1. 2. 1. 1. 1.]\n"
      ]
     }
    ],
@@ -437,10 +394,8 @@
     "\n",
     "mult = r.get_multiplicity()\n",
     "\n",
-    "mult_array = mult.get_array_read()\n",
-    "\n",
-    "print(mult_array)\n",
-    "\n",
+    "m_array = mult.get_array_read()\n",
+    "print('mult =', m_array)\n",
     "mult.restore_array_read()"
    ]
   },
@@ -460,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
