--- a/examples/jupyter/tutorials/tutorial6-python-qfunction.ipynb
+++ b/examples/jupyter/tutorials/tutorial6-python-qfunction.ipynb
@@ -111,15 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.         1.17950854 1.33277801 1.63931695 2.4789671  3.43190337\n",
-      " 3.2786339  0.        ]\n"
+      "v = CeedVector length 8\n",
+      "  0.000000\n",
+      "  1.179509\n",
+      "  1.332778\n",
+      "  1.639317\n",
+      "  2.478967\n",
+      "  3.431903\n",
+      "  3.278634\n",
+      "  0.000000\n",
+      "\n"
      ]
     }
    ],
@@ -164,11 +172,7 @@
     "outputs = [ v ]\n",
     "qf_mass.apply(q, inputs, outputs)\n",
     "\n",
-    "v_array = v.get_array_read()\n",
-    "\n",
-    "print(v_array)\n",
-    "\n",
-    "v.restore_array_read()"
+    "print('v =', v)"
    ]
   },
   {
@@ -180,14 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.  1.  4.  9. 16. 25. 36. 49.]\n"
+      "v = CeedVector length 8\n",
+      "  0.000000\n",
+      "  1.000000\n",
+      "  4.000000\n",
+      "  9.000000\n",
+      "  16.000000\n",
+      "  25.000000\n",
+      "  36.000000\n",
+      "  49.000000\n",
+      "\n"
      ]
     }
    ],
@@ -209,59 +222,75 @@
     "outputs = [ v ]\n",
     "qf.apply(q, inputs, outputs)\n",
     "\n",
-    "v_array = v.get_array_read()\n",
-    "\n",
-    "print(v_array)\n",
-    "\n",
-    "v.restore_array_read()"
+    "print('v =', v)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we create and evaluate a built-in identity QFunction with size > 1."
+    "* In the following example, we create and evaluate a built-in identity QFunction 3 fields per quadrature point."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  0.   1.   4.   9.  16.  25.  36.  49.  64.  81. 100. 121. 144. 169.\n",
-      " 196. 225. 256. 289. 324. 361. 400. 441. 484. 529.]\n"
+      "v = CeedVector length 24\n",
+      "  0.000000\n",
+      "  1.000000\n",
+      "  4.000000\n",
+      "  9.000000\n",
+      "  16.000000\n",
+      "  25.000000\n",
+      "  36.000000\n",
+      "  49.000000\n",
+      "  64.000000\n",
+      "  81.000000\n",
+      "  100.000000\n",
+      "  121.000000\n",
+      "  144.000000\n",
+      "  169.000000\n",
+      "  196.000000\n",
+      "  225.000000\n",
+      "  256.000000\n",
+      "  289.000000\n",
+      "  324.000000\n",
+      "  361.000000\n",
+      "  400.000000\n",
+      "  441.000000\n",
+      "  484.000000\n",
+      "  529.000000\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "size = 3\n",
+    "fields = 3\n",
     "\n",
-    "qf = ceed.IdentityQFunction(size, libceed.EVAL_INTERP, libceed.EVAL_INTERP)\n",
+    "qf = ceed.IdentityQFunction(fields, libceed.EVAL_INTERP, libceed.EVAL_INTERP)\n",
     "\n",
     "q = 8\n",
     "\n",
-    "u_array = np.zeros(q*size, dtype=\"float64\")\n",
-    "for i in range(q*size):\n",
+    "u_array = np.zeros(q*fields, dtype=\"float64\")\n",
+    "for i in range(q*fields):\n",
     "  u_array[i] = i*i\n",
     "\n",
-    "u = ceed.Vector(q*size)\n",
+    "u = ceed.Vector(q*fields)\n",
     "u.set_array(u_array, cmode=libceed.USE_POINTER)\n",
-    "v = ceed.Vector(q*size)\n",
+    "v = ceed.Vector(q*fields)\n",
     "v.set_value(0)\n",
     "\n",
     "inputs = [ u ]\n",
     "outputs = [ v ]\n",
     "qf.apply(q, inputs, outputs)\n",
     "\n",
-    "v_array = v.get_array_read()\n",
-    "\n",
-    "print(v_array)\n",
-    "\n",
-    "v.restore_array_read()"
+    "print('v =', v)"
    ]
   },
   {
@@ -273,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +349,7 @@
     "qf_mass = ceed.QFunctionByName(\"MassApply\")\n",
     "\n",
     "print(qf_setup)\n",
-    "print(qf_mass)\n"
+    "print(qf_mass)"
    ]
   }
  ],
