--- a/examples/jupyter/tutorials/tutorial7-python-operator.ipynb
+++ b/examples/jupyter/tutorials/tutorial7-python-operator.ipynb
@@ -118,9 +118,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+      "v = CeedVector length 61\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "  0.000000\n",
+      "\n"
      ]
     }
    ],
@@ -191,11 +251,7 @@
     "op_mass.apply(u, v)\n",
     "\n",
     "# Check\n",
-    "v_array = v.get_array_read()\n",
-    "\n",
-    "print(v_array)\n",
-    "\n",
-    "v.restore_array_read()"
+    "print('v =', v)"
    ]
   },
   {
