Jupyter-notebooks: Introduce Advanced Topics section, reorder material, and improve ASCII art

--- a/examples/jupyter/tutorials/tutorial4-python-elemrestriction.ipynb
+++ b/examples/jupyter/tutorials/tutorial4-python-elemrestriction.ipynb
@@ -160,19 +160,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the repetition, in the output of the restriction, of the indices that are at the boundary between elements."
+    "* In the following example, we illustrate how to extract the multiplicity of indices in an element restriction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mult = [1. 1. 1. 2. 1. 1. 2. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In this 1D example, there are four nodes per element\n",
+    "# \n",
+    "#  x -- o -- o -- x -- o -- o -- x -- o -- o -- x\n",
+    "\n",
+    "ne = 3\n",
+    "\n",
+    "ind = np.zeros(4*ne, dtype=\"int32\")\n",
+    "\n",
+    "for i in range(ne):\n",
+    "  ind[4*i+0] = i*3+0\n",
+    "  ind[4*i+1] = i*3+1\n",
+    "  ind[4*i+2] = i*3+2\n",
+    "  ind[4*i+3] = i*3+3\n",
+    "\n",
+    "r = ceed.ElemRestriction(ne, 4, 3*ne+1, 1, ind, cmode=libceed.USE_POINTER)\n",
+    "\n",
+    "mult = r.get_multiplicity()\n",
+    "\n",
+    "m_array = mult.get_array_read()\n",
+    "print('mult =', m_array)\n",
+    "mult.restore_array_read()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we illustrate the creation and use of a strided (identity) element restriction"
+    "* In the following example, we illustrate the creation and use of a strided (identity) element restriction. Strided restrictions are typically used for data stored at quadrature points or for vectors stored in the [E-vector](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#finite-element-operator-decomposition) format, such as in Discontinuous Galerkin approximations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -218,12 +255,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* In the following example, we illustrate the creation and view of a blocked strided (identity) element restriction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blocked CeedElemRestriction from (4, 1) to 3 elements with 2 nodes each and strides [1, 2, 2]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In this 1D example, there are three elements (four nodes in total) \n",
+    "# \n",
+    "#  x -- x -- x -- x\n",
+    "\n",
+    "ne = 3\n",
+    "\n",
+    "strides = np.array([1, 2, 2], dtype=\"int32\")\n",
+    "\n",
+    "r = ceed.BlockedStridedElemRestriction(ne, 2, 2, ne+1, 1, strides)\n",
+    "\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Advanced topics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* In the following example (intended for backend developers), we illustrate the creation of a blocked element restriction (from an L-vector to an E-vector) and its transpose (inverse operation, from an E-vector to an L-vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,25 +323,25 @@
     "# \n",
     "# We block elements into groups of 5:\n",
     "#  ________________________________________________________________________________________\n",
-    "# |                   block 1:                           |         block 2:               |\n",
-    "# |    e1    |    e2    |    e3    |    e4    |    e5    |    e1    |    e2    |    e3    |\n",
-    "# |                                                      |                                |\n",
-    "# |  x --  x  |  x -- x  |  x -- x  |  x -- x  |  x -- x |  x -- x  |  x -- x  |  x  -- x |\n",
-    "# | 10 -- 11  | 11   12  | 12   13  | 13   14  | 14   15 | 15   16  | 16   17  |  17   18 |\n",
+    "# |                   block 0:                            |         block 1:               |\n",
+    "# |     e0    |    e1    |    e2    |    e3    |    e4    |    e0    |    e1    |    e2    |\n",
+    "# |                                                       |                                |\n",
+    "# |  x --  x  |  x -- x  |  x -- x  |  x -- x  |  x -- x  |  x -- x  |  x -- x  |  x  -- x |\n",
+    "# | 10 -- 11  | 11   12  | 12   13  | 13   14  | 14   15  | 15   16  | 16   17  |  17   18 |\n",
     "#\n",
     "# Intermediate logical representation:\n",
     "#  ______________________________________________________________________________\n",
-    "# |               block 1:               |               block 2:               |\n",
-    "# |     node1:                 node2:    |     node1:                 node2:    |\n",
-    "# | 10-11-12-13-14        11-12-13-14-15 | 15-16-17-*-*            16-17-18-*-* |\n",
-    "# | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 |\n",
+    "# |               block 0:               |               block 1:               |\n",
+    "# |     node0:                 node1:    |     node0:                 node1:    |\n",
+    "# | 10-11-12-13-14        11-12-13-14-15 | 15-16-17- *- *        16-17-18- *- * |\n",
+    "# | e0 e1 e2 e3 e4        e0 e1 e2 e3 e4 | e0 e1 e2 e3 e4        e0 e1 e2 e3 e4 |\n",
     "#\n",
     "# Forward restriction output:\n",
     "#  ______________________________________________________________________________\n",
-    "# |               block 1:               |               block 2:               |\n",
-    "# |     node1:                 node2:    |     node1:                 node2:    |\n",
+    "# |               block 0:               |               block 1:               |\n",
+    "# |     node0:                 node1:    |     node0:                 node1:    |\n",
     "# | 10-11-12-13-14        11-12-13-14-15 | 15-16-17-17-17        16-17-18-18-18 |\n",
-    "# | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 | e1 e2 e3 e4 e5        e1 e2 e3 e4 e5 |\n",
+    "# | e0 e1 e2 e3 e4        e0 e1 e2 e3 e4 | e0 e1 e2 e3 e4        e0 e1 e2 e3 e4 |\n",
     "\n",
     "ne = 8\n",
     "blksize = 5\n",
@@ -300,12 +379,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we illustrate the creation and use of a blocked element restriction (from an L-vector to an E-vector) and its transpose (inverse operation, from an E-vector to an L-vector)"
+    "* In the following example (intended for backend developers), we illustrate the creation and application of a blocked element restriction (from an L-vector to an E-vector) and its transpose (inverse operation, from an E-vector to an L-vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,6 +401,28 @@
     "# \n",
     "#  x --  x --  x --  x --  x --  x --  x --  x --  x\n",
     "# 10 -- 11 -- 12 -- 13 -- 14 -- 15 -- 16 -- 17 -- 18\n",
+    "#\n",
+    "# We block elements into groups of 5:\n",
+    "#  ________________________________________________________________________________________\n",
+    "# |                   block 0:                            |         block 1:               |\n",
+    "# |     e0    |    e1    |    e2    |    e3    |    e4    |    e0    |    e1    |    e2    |\n",
+    "# |                                                       |                                |\n",
+    "# |  x --  x  |  x -- x  |  x -- x  |  x -- x  |  x -- x  |  x -- x  |  x -- x  |  x  -- x |\n",
+    "# | 10 -- 11  | 11   12  | 12   13  | 13   14  | 14   15  | 15   16  | 16   17  |  17   18 |\n",
+    "#\n",
+    "# Intermediate logical representation (extraction of block1 only in this case):\n",
+    "#  _______________________________________\n",
+    "# |               block 1:               |\n",
+    "# |     node0:                 node1:    |\n",
+    "# | 15-16-17- *- *        16-17-18- *- * |\n",
+    "# | e0 e1 e2 e3 e4        e0 e1 e2 e3 e4 |\n",
+    "#\n",
+    "# Forward restriction output:\n",
+    "#  _______________________________________\n",
+    "# |               block 1:               |\n",
+    "# |     node0:                 node1:    |\n",
+    "# | 15-16-17-17-17        16-17-18-18-18 |\n",
+    "# | e0 e1 e2 e3 e4        e0 e1 e2 e3 e4 |\n",
     "\n",
     "ne = 8\n",
     "blksize = 5\n",
@@ -359,86 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we illustrate how to extract the multiplicity of indices in an element restriction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mult = [1. 1. 1. 2. 1. 1. 2. 1. 1. 1.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# In this 1D example, there are four nodes per element\n",
-    "# \n",
-    "#  x -- o -- o -- x -- o -- o -- x -- o -- o -- x\n",
-    "\n",
-    "ne = 3\n",
-    "\n",
-    "ind = np.zeros(4*ne, dtype=\"int32\")\n",
-    "\n",
-    "for i in range(ne):\n",
-    "  ind[4*i+0] = i*3+0\n",
-    "  ind[4*i+1] = i*3+1\n",
-    "  ind[4*i+2] = i*3+2\n",
-    "  ind[4*i+3] = i*3+3\n",
-    "\n",
-    "r = ceed.ElemRestriction(ne, 4, 3*ne+1, 1, ind, cmode=libceed.USE_POINTER)\n",
-    "\n",
-    "mult = r.get_multiplicity()\n",
-    "\n",
-    "m_array = mult.get_array_read()\n",
-    "print('mult =', m_array)\n",
-    "mult.restore_array_read()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Note that the nodes at the boundary between elements have multiplicty 2, while the internal nodes and the outer boundary nodes, have multiplicuty 1."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* In the following example, we illustrate the creation and view of a blocked strided (identity) element restriction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blocked CeedElemRestriction from (4, 1) to 3 elements with 2 nodes each and strides [1, 2, 2]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# In this 1D example, there are three elements (four nodes in total) \n",
-    "# \n",
-    "#  x -- x -- x -- x\n",
-    "\n",
-    "ne = 3\n",
-    "\n",
-    "strides = np.array([1, 2, 2], dtype=\"int32\")\n",
-    "\n",
-    "r = ceed.BlockedStridedElemRestriction(ne, 2, 2, ne+1, 1, strides)\n",
-    "\n",
-    "print(r)"
    ]
   }
  ],
