Jupyter-notebooks: View operators and show length of the domain for Mass opeartor example

--- a/examples/jupyter/tutorials/tutorial7-python-operator.ipynb
+++ b/examples/jupyter/tutorials/tutorial7-python-operator.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we create and apply a CeedOperator for the mass matrix in 1D."
+    "* In the following example, we create and apply a CeedOperator for the mass matrix in 1D. By applying this operator to a vector of 1's, we compute the length of this 1D domain, similar to Ex1-Volume in the [tutorial1-ceed tutorial](./tutorial1-ceed.ipynb)"
    ]
   },
   {
@@ -118,69 +118,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "v = CeedVector length 61\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "  0.000000\n",
-      "\n"
+      "Setup operator:  CeedOperator\n",
+      "  3 Fields\n",
+      "  2 Input Fields:\n",
+      "    Input Field [0]:\n",
+      "      Name: \"dx\"\n",
+      "      Active vector\n",
+      "    Input Field [1]:\n",
+      "      Name: \"weights\"\n",
+      "      No vector\n",
+      "  1 Output Field:\n",
+      "    Output Field [0]:\n",
+      "      Name: \"dx\"\n",
+      "      Collocated basis\n",
+      "      Active vector\n",
+      "\n",
+      "Mass operator:  CeedOperator\n",
+      "  3 Fields\n",
+      "  2 Input Fields:\n",
+      "    Input Field [0]:\n",
+      "      Name: \"u\"\n",
+      "      Active vector\n",
+      "    Input Field [1]:\n",
+      "      Name: \"qdata\"\n",
+      "      Collocated basis\n",
+      "  1 Output Field:\n",
+      "    Output Field [0]:\n",
+      "      Name: \"u\"\n",
+      "      Active vector\n",
+      "\n",
+      "The length of the domain is l = 1.00\n"
      ]
     }
    ],
@@ -230,28 +197,33 @@
     "qf_setup = ceed.QFunctionByName(\"Mass1DBuild\")\n",
     "qf_mass = ceed.QFunctionByName(\"MassApply\")\n",
     "\n",
-    "# Operators\n",
+    "# Setup operator\n",
     "op_setup = ceed.Operator(qf_setup)\n",
     "op_setup.set_field(\"dx\", rx, bx, libceed.VECTOR_ACTIVE)\n",
     "op_setup.set_field(\"weights\", libceed.ELEMRESTRICTION_NONE, bx,\n",
     "                   libceed.VECTOR_NONE)\n",
     "op_setup.set_field(\"qdata\", rui, libceed.BASIS_COLLOCATED,\n",
     "                   libceed.VECTOR_ACTIVE)\n",
+    "print('Setup operator: ', op_setup)\n",
     "\n",
+    "# Mass operator\n",
     "op_mass = ceed.Operator(qf_mass)\n",
     "op_mass.set_field(\"u\", ru, bu, libceed.VECTOR_ACTIVE)\n",
     "op_mass.set_field(\"qdata\", rui, libceed.BASIS_COLLOCATED, qdata)\n",
     "op_mass.set_field(\"v\", ru, bu, libceed.VECTOR_ACTIVE)\n",
+    "print('Mass operator: ', op_mass)\n",
     "\n",
     "# Setup\n",
     "op_setup.apply(x, qdata)\n",
     "\n",
     "# Apply mass matrix\n",
-    "u.set_value(0)\n",
+    "u.set_value(1)\n",
     "op_mass.apply(u, v)\n",
     "\n",
     "# Check\n",
-    "print('v =', v)"
+    "v_array = v.get_array_read()\n",
+    "print('The length of the domain is l = %4.2f'%np.sum(v_array))\n",
+    "v.restore_array_read()"
    ]
   },
   {
