Jupyter-notebooks: Update tutorial2-python-ceed with new CeedView() function from PR #486

--- a/examples/tutorials/tutorial2-python-ceed.ipynb
+++ b/examples/tutorials/tutorial2-python-ceed.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,27 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ceed\n",
+      "  Ceed Resource: /cpu/self/xsmm/blocked\n",
+      "  Preferred MemType: host\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(ceed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "or simply"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ceed"
    ]
   },
   {
@@ -156,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
